[package]
name = "config-server-sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-rt = "2"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
actix-web = "4.0"
serde_yaml = "0.9.33"
log = "0.4"
env_logger = "0.11.3"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = { version = "2.0.0-4.0" }
slog-term = "2.8.0"
async-trait = "0.1"
actix-web-actors = "4.0"
actix = "0.13"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
actix-web-lab = "0.20.2"
futures = "0.3.30"
tokio-stream = "0.1.15"
bytes = "1.5.0"
bytestring = "1.3.1"

[dev-dependencies]
tempfile = "3.2.0"

